# audio-offset-finder

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  README.md  audio-offset-finder.spec  offset_finder.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-test.yml  codeql-analysis.yml  publish.yml  python-package.yml
audio_offset_finder/: __init__.py  audio_offset_finder.py  cli.py
offset_finder/: __init__.py
tests/: audio_offset_finder_test.py  offset_finder_tests.py  tool_test.py
