[metadata]
name = audio-offset-finder
version = 0.5.2
author = Yves Raimond, Stephen Jolly
author_email = stephen.jolly@rd.bbc.co.uk
url = https://github.com/bbcrd/audio-offset-finder
license = Apache License 2.0
description = Find the offset of an audio file within another audio file
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
  scipy >= 0.12.0
  numpy >= 1.22.0
  librosa
  matplotlib

[options.extras_require]
test = pytest
dev =
  black == 22.3.0

[options.entry_points]
console_scripts =
  audio-offset-finder = audio_offset_finder.cli:run
